Fixed layout issues on mobile
Everything is now centered
Filter and switch button are now placed and sized correctly

--- a/css/style.css
+++ b/css/style.css
@@ -49,8 +49,8 @@ body {
   width: 100%;
   text-align: center;
   margin-bottom: 20px;
-  padding-right: 50px;
-  padding-left: 50px;
+  padding-right: 12px;
+  padding-left: 12px;
 }
 
 .switchDiv {
@@ -87,24 +87,8 @@ body {
   margin-left: 15px;
 }
 
-@media screen and (max-width: 500px) and (min-width: 400px) {
-  .switch {
-    width: auto;
-  }
-
-  .switchDiv {
-    text-align: center;
-  }
-
-  .top-droplist {
-    text-align: center;
-    margin-left: 0px;
-
-  }
-
-  div.box {
-    margin-left: 40px;
-  }
+select{
+  max-width: 85%;
 }
 
 @media screen and (max-width: 400px) {
@@ -116,12 +100,6 @@ body {
     text-align: center;
   }
 
-  .top-droplist {
-    text-align: center;
-    margin-left: -22px;
-
-  }
-
   div.box {
     margin-left: 25px;
   }
@@ -131,21 +109,7 @@ body {
   }
 }
 
-@media screen and (max-width: 1399px) and (min-width: 1200px) {
-  div.col-xl-3:nth-child(n) {
-    margin-right: 50px;
-  }
-
-}
-
-@media screen and (max-width: 1199px) and (min-width: 990px) {
-  div.switchDiv {
-    margin-left: 40px;
-  }
-
-}
-
-@media screen and (max-width: 767px) and (min-width: 520px) {
+@media screen and (max-width: 767px){
   div.box:nth-child(n) {
     margin-left: auto;
     margin-right: auto;
@@ -153,13 +117,18 @@ body {
 
   .top-droplist {
     text-align: center;
-    margin-left: 5px;
-
+    margin-left: 0px;
   }
 
   div.switchDiv {
     text-align: center;
-    margin-left: 2px;
+  }
+
+  .row {
+    padding-left: 0px !important;
+    padding-right: 0px !important;
+    margin-left: 0px !important;
+    margin-right: 0px !important;
   }
 }
 
@@ -190,25 +159,4 @@ body {
   to {
     visibility: hidden;
   }
-}
-
-
-@media screen and (max-width: 767px) {
-
-  .row {
-    padding-left: 0px !important;
-  }
-/*
-  .card-text {
-    visibility: hidden;
-  }
-
-  .box {
-    height: auto;
-  }
-
-  .card-body {
-    max-height: 50px;
-  }
-  */
 }
